{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 46,
  "lineage": "66c52e56-9b49-72e7-eb1b-bacbfbe7b6bb",
  "resources": [
    {
      "module": "module.masterNode",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0970deb1c04e84cab",
            "domain": "vpc",
            "id": "eipalloc-07ef8effda8876022",
            "instance": "i-0aa82b109639b9554",
            "network_interface": "eni-0648cebb98dfb81a2",
            "private_dns": "ip-10-150-0-148.ec2.internal",
            "private_ip": "10.150.0.148",
            "public_dns": "ec2-3-232-114-110.compute-1.amazonaws.com",
            "public_ip": "3.232.114.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-087b8f2b3364553c2",
            "domain": "vpc",
            "id": "eipalloc-018c655ff079833b4",
            "instance": "i-0aa335c90e4e94924",
            "network_interface": "eni-0325f064f1525e58e",
            "private_dns": "ip-10-150-0-204.ec2.internal",
            "private_ip": "10.150.0.204",
            "public_dns": "ec2-34-231-15-64.compute-1.amazonaws.com",
            "public_ip": "34.231.15.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-050cca29416a3d3c4",
            "domain": "vpc",
            "id": "eipalloc-05d2c55041384a79a",
            "instance": "i-0c8ab124d74788c1d",
            "network_interface": "eni-069ff5434d5fc71b9",
            "private_dns": "ip-10-150-0-52.ec2.internal",
            "private_ip": "10.150.0.52",
            "public_dns": "ec2-3-232-103-131.compute-1.amazonaws.com",
            "public_ip": "3.232.103.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance"
          ]
        }
      ]
    },
    {
      "module": "module.masterNode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:684135021874:instance/i-0aa82b109639b9554",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0aa82b109639b9554",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "es-lab-keyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0648cebb98dfb81a2",
            "private_dns": "ip-10-150-0-148.ec2.internal",
            "private_ip": "10.150.0.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7f70138b136a82d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a353f38a9963e65d",
            "tags": {
              "Name": "es-master-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cca2790cb8ca556"
            ]
          },
          "depends_on": [
            "data.template_cloudinit_config.userData"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:684135021874:instance/i-0aa335c90e4e94924",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0aa335c90e4e94924",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "es-lab-keyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0325f064f1525e58e",
            "private_dns": "ip-10-150-0-204.ec2.internal",
            "private_ip": "10.150.0.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-056037c4f048d73b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a353f38a9963e65d",
            "tags": {
              "Name": "es-master-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cca2790cb8ca556"
            ]
          },
          "depends_on": [
            "data.template_cloudinit_config.userData"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:684135021874:instance/i-0c8ab124d74788c1d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c8ab124d74788c1d",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "es-lab-keyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-069ff5434d5fc71b9",
            "private_dns": "ip-10-150-0-52.ec2.internal",
            "private_ip": "10.150.0.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042e838e55be7692d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a353f38a9963e65d",
            "tags": {
              "Name": "es-master-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cca2790cb8ca556"
            ]
          },
          "depends_on": [
            "data.template_cloudinit_config.userData"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09e3a3a3cf51c3004",
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            },
            "vpc_id": "vpc-022563250ef9c874f"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "es-labRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bb439d02a4394196",
            "owner_id": "684135021874",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e3a3a3cf51c3004",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "es-lab-RouteTable"
            },
            "vpc_id": "vpc-022563250ef9c874f"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "es-labRouteTableAssociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010b956af0a243f07",
            "route_table_id": "rtb-0bb439d02a4394196",
            "subnet_id": "subnet-0a353f38a9963e65d"
          },
          "depends_on": [
            "aws_route_table.es-labRouteTable",
            "aws_subnet.es-labSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "es-labSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:security-group/sg-05cca2790cb8ca556",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cca2790cb8ca556",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.150.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20191023202754065700000001",
            "name_prefix": null,
            "owner_id": "684135021874",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-022563250ef9c874f"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "es-labSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:subnet/subnet-0a353f38a9963e65d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.150.0.0/24",
            "id": "subnet-0a353f38a9963e65d",
            "map_public_ip_on_launch": false,
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            },
            "vpc_id": "vpc-022563250ef9c874f"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:vpc/vpc-022563250ef9c874f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.150.0.0/24",
            "default_network_acl_id": "acl-059aeb755499b4ef9",
            "default_route_table_id": "rtb-0e5e366e975619cd6",
            "default_security_group_id": "sg-0cc8f31ab5368bd17",
            "dhcp_options_id": "dopt-04b32aa21e7917b3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-022563250ef9c874f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5e366e975619cd6",
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            }
          }
        }
      ]
    }
  ]
}